[package]
name = "leetcode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "first-missing-positive"
path = "./Arrays/first-missing-positive/first-missing-positive.rs"

[[bin]]
name = "product-of-array-except-self-2"
path = "./Arrays/product-of-array-except-self/product-of-array-except-self-2.rs"

[[bin]]
name = "product-of-array-except-self"
path = "./Arrays/product-of-array-except-self/product-of-array-except-self.rs"

[[bin]]
name = "best-time-to-buy-and-sell-stock-ii"
path = "./Arrays/best-time-to-buy-and-sell-stock-ii/best-time-to-buy-and-sell-stock-ii.rs"

[[bin]]
name = "best-time-to-buy-and-sell-stock"
path = "./Arrays/best-time-to-buy-and-sell-stock/best-time-to-buy-and-sell-stock.rs"

[[bin]]
name = "increasing-triplet-subsequence"
path = "./Arrays/increasing-triplet-subsequence/increasing-triplet-subsequence.rs"

[[bin]]
name = "majority-element-3"
path = "./Arrays/majority-element/majority-element-3.rs"

[[bin]]
name = "move-zeroes"
path = "./Arrays/move-zeroes/move-zeroes.rs"

[[bin]]
name = "rotate-array"
path = "./Arrays/rotate-array/rotate-array.rs"

[[bin]]
name = "remove-duplicates-from-sorted-array"
path = "./Arrays/remove-duplicates-from-sorted-array/remove-duplicates-from-sorted-array.rs"

[[bin]]
name = "number-of-zero-filled-subarrays"
path = "./Arrays/number-of-zero-filled-subarrays/number-of-zero-filled-subarrays.rs"

[[bin]]
name = "longest-common-prefix"
path = "./Strings/longest-common-prefix/longest-common-prefix.rs"

[[bin]]
name = "is-subsequence"
path = "./Strings/is-subsequence/is-subsequence.rs"

[[bin]]
name = "valid-palindrome"
path = "./Strings/valid-palindrome/valid-palindrome.rs"

[[bin]]
name = "guess-the-word"
path = "./Strings/guess-the-word/guess-the-word.rs"

[[bin]]
name = "reverse-words-in-a-string"
path = "./Strings/reverse-words-in-a-string/reverse-words-in-a-string.rs"

[[bin]]
name = "zigzag-conversion"
path = "./Strings/zigzag-conversion/zigzag-conversion.rs"

[[bin]]
name = "single-number"
path = "./Bit Manipulation/single-number/single-number.rs"

[[bin]]
name = "number-of-1-bits"
path = "./Bit Manipulation/number-of-1-bits/number-of-1-bits.rs"

